# rust-wasm-spa-starter

./: .gitignore  Cargo.toml  README.md
app-preact/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
app-preact/src/: app.tsx  index.css  types.ts
app-preact/src/components/: counter.tsx  parallel-counter.tsx
app-preact/src/hooks/: confetti.ts  hooks.ts
app-svelte/: package-lock.json  package.json  vite.config.ts
app-svelte/src/lib/: types.ts
app-svelte/src/lib/components/: counter.svelte
app-svelte/src/lib/hooks/: useConfetti.svelte.ts  useRustCtx.svelte.ts  useWasm.svelte.ts
app-svelte/src/routes/: +layout.svelte  +page.svelte
js/: lib.js
src/: app_config.rs  bindings.rs  context.rs  counter.rs  events.rs  lib.rs
